2011-03-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/mm.h (GRUB_MM_CHECK): Rename to ...
	(grub_mm_check): ... this. MAke a function-like macro and use GRUB_FILE.

2011-03-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (allocate_inreg): Avoid dprintf unless
	DEBUG_RELOCATOR is defined since gfxterm can't cope with output when
	malloc is disabled.

2011-03-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_freebsd_load_elfmodule): Account
	for modules headers when counting the needed allocation size.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (calculate_normal_character_width): Return 8
	if no ASCII character is found to prevent crash.

2011-03-23  Alexander Kurtz  <kurtz.alex@googlemail.com>

	* grub-core/video/bitmap.c (match_extension): Ignore case.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (init_line): Fix off-by-one error.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/parser.y: Declare "time" as valid argument.

2011-03-23  Peter Jones  <pjones@redhat.com>

	Fix incorrect assert failure reporting.

	* grub-core/tests/example_functional_test.c (example_test): Add
	a failure comment.
	* grub-core/tests/lib/test.c (add_failure): Renamed to ...
	(failure_start): ...this. Check that malloc succeeded.
	Don't call xvasprintf. Return failure struct.
	(failure_append_vtext): New function.
	(failure_append_text): Likewise.
	(add_failure): Likewise.
	(grub_test_assert_helper): Likewise.
	* include/grub/test.h (grub_test_assert_helper): New declaration.
	(grub_test_assert): Macro rewritten.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/main.c (GRUB_MOD_INIT): Export pager variable.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/i386/pc/biosnum.c: Add missing include.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>
